--- a/main.css
+++ b/main.css
@@ -11,7 +11,6 @@
 	font-weight:bold;
 	font-style:italic;
 	font-size:120%;
-
 }
 
 .em {
@@ -20,8 +19,12 @@
 
 .models{
 	padding:5%;
-	margin:5%;
 	width:100%;
+  margin-bottom: 5%;
+}
+
+input.text{
+  width:80%;
 }
 
 /*Hide radio buttons and allow selecting images*/
